[tool.poetry]
name = "authwa"
version = "0.1.0"
description = ""
authors = ["Guilherme Breve <64221923+foxtec198@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.add.dependencies]
mkdocs-material = "^9.5.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
