[tool.poetry]
name = "authwa"
version = "0.5.0"
description = "Automações WhatsApp"
authors = ["Guilherme Breve <64221923+foxtec198@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "authWA.py"}]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: Portuguese (Brazilian)",
    "Intended Audience :: Developers",
]   


[tool.poetry.urls]  
"Documentação" = "https://authwa.readthedocs.io"


[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"


[tool.poetry.group.add.dependencies]
mkdocs-material = "^9.5.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pypi]
username = "__token__"
password = "pypi-AgEIcHlwaS5vcmcCJDkwNGZmZWUwLWRmMjktNDBkMC1iNzZiLThjMWNhZmJiYTVmNgACDlsxLFsiYXV0aHdhIl1dAAIsWzIsWyI0MDAyNzI3Yi0wMWJiLTQ5MTAtYjdlNy00YzRiNzg5N2QzZjkiXV0AAAYg_LwlBtMdZJwAYsC-PQZi5jIANfsZGlvRVezPD-1cNPw"